--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,24 @@ perl6:
     - '2017.09'
     - latest
 
+env:
+    - ZMQ=zeromq4-1
+
+before_install:
+    - sudo add-apt-repository -y ppa:anton+/dnscrypt
+    - sudo apt-get update
+    - wget https://github.com/zeromq/$ZMQ/archive/master.zip -O libzmq.zip
+    - unzip libzmq.zip
+    - pushd "$ZMQ-master"
+    - ./autogen.sh
+    - ./configure --enable-drafts
+    - make -j
+    - sudo make install
+    - sudo ldconfig
+    - popd
+    - export ZMQ=/usr/local
+    - export ZMQ_DRAFT_API=1
+
 install:
     - rakudobrew build-zef
     - zef --debug --deps-only install .
